--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,10 @@ jobs:
 
       - name: Run Clang-Format Style Check
         run: |
-          # Find all .c files in kernel and user, then exclude the data file
-          # We only check .c files, skipping .h as requested
+          # Only check .c files in kernel and user directories
+          # Exclude icons_data.c as it contains large data arrays that trigger errors
           find kernel user -name "*.c" | grep -v "icons_data.c" | xargs clang-format --dry-run --Werror
+        # This step ensures code follows the .clang-format rules before building
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -38,6 +39,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install Pillow
+          # Required by convert.py for processing icons
 
       - name: Install System Dependencies
         run: |
@@ -46,17 +48,19 @@ jobs:
 
       - name: Clean Environment
         run: make clean
+        # Cleans previous build artifacts defined in your Makefile
 
       - name: Build OS Images
         run: make all
+        # Compiles the kernel and user programs into .img files
 
       - name: Verify Build Artifacts
         run: |
           if [ -f "img/xv6OS.img" ] && [ -f "img/fs.img" ]; then
-            echo "Success: OS images created."
+            echo "Success: OS images generated."
             ls -lh img/
           else
-            echo "Error: Build artifacts missing."
+            echo "Error: Required image files are missing."
             exit 1
           fi
 
