[NorthOS Standard Commit Message]
Header: NorthOS v0.2.7: Revamp File Explorer & CI Cleanup

- Reorganized Explorer into a modular structure using sub-files for better maintainability.
- Implemented new logic for dialogs, file operations, and UI handlers within app/explorer.
- Updated Desktop components to integrate seamlessly with the new Explorer system.
- Relaxed CI Workflow: removed strict clang-format checks to speed up the build process.
- Renamed LICENSE to LICENSE.txt and applied minor tweaks to the Makefile.

Files added:
- app/explorer/explorer.h
- app/explorer/explorer_dialogs.c
- app/explorer/explorer_fileops.c
- app/explorer/explorer_handlers.c
- app/explorer/explorer_main.c
- app/explorer/explorer_ui.c
- app/explorer/explorer_utils.c
- LICENSE.txt

Files modified:
- .github/workflows/ci.yml
- Makefile
- app/explorer/explorer.c
- user/desktop.c

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Clang-Format
-        run: sudo apt-get install -y clang-format
-
-      - name: Run Clang-Format Style Check
-        run: |
-          find kernel user -name "*.c" | grep -v "icons_data.c" | xargs clang-format --dry-run --Werror || echo "Format check failed, but continuing..."
-
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -42,7 +35,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gcc-multilib build-essential binutils
 
-      # LANGKAH KRUSIAL: Generate file yang di-ignore oleh git
+      # Menghasilkan file yang dibutuhkan untuk build
       - name: Generate Font and Icon Data
         run: |
           python3 font.py
